goidlgenerator/yacc/y.output

state 0
	$accept: .specification $end 

	Rwconst  shift 8
	Rwenum  shift 21
	Rwmodule  shift 7
	Rwnative  shift 15
	Rwstruct  shift 22
	Rwtypedef  shift 16
	Rwunion  shift 23
	.  error

	native_dcl  goto 10
	specification  goto 1
	definition  goto 3
	definitions  goto 2
	module_dcl  goto 4
	type_dcl  goto 6
	const_dcl  goto 5
	struct_dcl  goto 12
	struct_forward_dcl  goto 18
	struct_def  goto 17
	constr_type_dcl  goto 9
	enum_dcl  goto 14
	typedef_dcl  goto 11
	union_dcl  goto 13
	union_def  goto 19
	union_foRward_dcl  goto 20

state 1
	$accept:  specification.$end 

	$end  accept
	.  error


state 2
	specification:  definitions.    (1)
	definitions:  definitions.definition 

	Rwconst  shift 8
	Rwenum  shift 21
	Rwmodule  shift 7
	Rwnative  shift 15
	Rwstruct  shift 22
	Rwtypedef  shift 16
	Rwunion  shift 23
	.  reduce 1 (src line 133)

	native_dcl  goto 10
	definition  goto 24
	module_dcl  goto 4
	type_dcl  goto 6
	const_dcl  goto 5
	struct_dcl  goto 12
	struct_forward_dcl  goto 18
	struct_def  goto 17
	constr_type_dcl  goto 9
	enum_dcl  goto 14
	typedef_dcl  goto 11
	union_dcl  goto 13
	union_def  goto 19
	union_foRward_dcl  goto 20

state 3
	definitions:  definition.    (2)

	.  reduce 2 (src line 140)


state 4
	definition:  module_dcl.';' 

	';'  shift 25
	.  error


state 5
	definition:  const_dcl.';' 

	';'  shift 26
	.  error


state 6
	definition:  type_dcl.';' 

	';'  shift 27
	.  error


state 7
	module_dcl:  Rwmodule.Identifier '{' definitions '}' 

	Identifier  shift 28
	.  error


state 8
	const_dcl:  Rwconst.const_type Identifier '=' const_expr 

	Identifier  shift 52
	Scope  shift 53
	Rwboolean  shift 48
	Rwchar  shift 46
	Rwdouble  shift 43
	Rwfixed  shift 45
	Rwfloat  shift 42
	Rwlong  shift 44
	Rwoctet  shift 49
	Rwshort  shift 60
	Rwstring  shift 50
	Rwunsigned  shift 61
	Rwwchar  shift 47
	Rwwstring  shift 51
	.  error

	signed_long_int  goto 55
	floating_pt_type  goto 31
	signed_short_int  goto 54
	char_type  goto 33
	wide_char_type  goto 34
	integer_type  goto 30
	boolean_type  goto 35
	octet_type  goto 36
	unsigned_short_int  goto 57
	unsigned_longlong_int  goto 59
	unsigned_long_int  goto 58
	signed_int  goto 40
	signed_longlong_int  goto 56
	unsigned_int  goto 41
	scoped_name  goto 39
	const_type  goto 29
	fixed_pt_const_type  goto 32
	string_type  goto 37
	wide_string_type  goto 38

state 9
	type_dcl:  constr_type_dcl.    (58)

	.  reduce 58 (src line 324)


state 10
	type_dcl:  native_dcl.    (59)

	.  reduce 59 (src line 328)


state 11
	type_dcl:  typedef_dcl.    (60)

	.  reduce 60 (src line 337)


state 12
	constr_type_dcl:  struct_dcl.    (103)

	.  reduce 103 (src line 532)


state 13
	constr_type_dcl:  union_dcl.    (104)

	.  reduce 104 (src line 536)


state 14
	constr_type_dcl:  enum_dcl.    (105)

	.  reduce 105 (src line 539)


state 15
	native_dcl:  Rwnative.simple_declarator 

	Identifier  shift 63
	.  error

	simple_declarator  goto 62

state 16
	typedef_dcl:  Rwtypedef.type_declarator 

	Identifier  shift 52
	Scope  shift 53
	Rwboolean  shift 48
	Rwchar  shift 46
	Rwdouble  shift 43
	Rwenum  shift 21
	Rwfixed  shift 81
	Rwfloat  shift 42
	Rwlong  shift 44
	Rwoctet  shift 49
	Rwsequence  shift 80
	Rwshort  shift 60
	Rwstring  shift 50
	Rwstruct  shift 22
	Rwunsigned  shift 61
	Rwunion  shift 23
	Rwwchar  shift 47
	Rwwstring  shift 51
	.  error

	signed_long_int  goto 55
	simple_type_spec  goto 65
	floating_pt_type  goto 75
	base_type_spec  goto 68
	signed_short_int  goto 54
	char_type  goto 76
	wide_char_type  goto 77
	integer_type  goto 74
	boolean_type  goto 78
	octet_type  goto 79
	unsigned_short_int  goto 57
	unsigned_longlong_int  goto 59
	unsigned_long_int  goto 58
	signed_int  goto 40
	signed_longlong_int  goto 56
	unsigned_int  goto 41
	scoped_name  goto 69
	sequence_type  goto 70
	template_type_spec  goto 66
	string_type  goto 71
	wide_string_type  goto 72
	fixed_pt_type  goto 73
	struct_dcl  goto 12
	struct_forward_dcl  goto 18
	struct_def  goto 17
	constr_type_dcl  goto 67
	enum_dcl  goto 14
	type_declarator  goto 64
	union_dcl  goto 13
	union_def  goto 19
	union_foRward_dcl  goto 20

state 17
	struct_dcl:  struct_def.    (106)

	.  reduce 106 (src line 546)


state 18
	struct_dcl:  struct_forward_dcl.    (107)

	.  reduce 107 (src line 551)


state 19
	union_dcl:  union_def.    (113)

	.  reduce 113 (src line 590)


state 20
	union_dcl:  union_foRward_dcl.    (114)

	.  reduce 114 (src line 590)


state 21
	enum_dcl:  Rwenum.Identifier '{' enumerator '}' 

	Identifier  shift 82
	.  error


state 22
	struct_def:  Rwstruct.Identifier '{' member '}' 
	struct_def:  Rwstruct.Identifier '{' '}' 
	struct_forward_dcl:  Rwstruct.Identifier 

	Identifier  shift 83
	.  error


state 23
	union_def:  Rwunion.Identifier Rwswitch '(' switch_type_spec ')' '{' switch_body '}' 
	union_foRward_dcl:  Rwunion.Identifier 

	Identifier  shift 84
	.  error


state 24
	definitions:  definitions definition.    (3)

	.  reduce 3 (src line 144)


state 25
	definition:  module_dcl ';'.    (4)

	.  reduce 4 (src line 149)


state 26
	definition:  const_dcl ';'.    (5)

	.  reduce 5 (src line 153)


state 27
	definition:  type_dcl ';'.    (6)

	.  reduce 6 (src line 156)


state 28
	module_dcl:  Rwmodule Identifier.'{' definitions '}' 

	'{'  shift 85
	.  error


state 29
	const_dcl:  Rwconst const_type.Identifier '=' const_expr 

	Identifier  shift 86
	.  error


state 30
	const_type:  integer_type.    (12)

	.  reduce 12 (src line 201)


state 31
	const_type:  floating_pt_type.    (13)

	.  reduce 13 (src line 205)


state 32
	const_type:  fixed_pt_const_type.    (14)

	.  reduce 14 (src line 208)


state 33
	const_type:  char_type.    (15)

	.  reduce 15 (src line 211)


state 34
	const_type:  wide_char_type.    (16)

	.  reduce 16 (src line 214)


state 35
	const_type:  boolean_type.    (17)

	.  reduce 17 (src line 217)


state 36
	const_type:  octet_type.    (18)

	.  reduce 18 (src line 220)


state 37
	const_type:  string_type.    (19)

	.  reduce 19 (src line 223)


state 38
	const_type:  wide_string_type.    (20)

	.  reduce 20 (src line 226)


state 39
	scoped_name:  scoped_name.Scope Identifier 
	const_type:  scoped_name.    (21)

	Scope  shift 87
	.  reduce 21 (src line 229)


state 40
	integer_type:  signed_int.    (73)

	.  reduce 73 (src line 391)


state 41
	integer_type:  unsigned_int.    (74)

	.  reduce 74 (src line 395)


state 42
	floating_pt_type:  Rwfloat.    (70)

	.  reduce 70 (src line 381)


state 43
	floating_pt_type:  Rwdouble.    (71)

	.  reduce 71 (src line 385)


state 44
	floating_pt_type:  Rwlong.Rwdouble 
	signed_long_int:  Rwlong.    (79)
	signed_longlong_int:  Rwlong.Rwlong 

	Rwdouble  shift 88
	Rwlong  shift 89
	.  reduce 79 (src line 412)


state 45
	fixed_pt_const_type:  Rwfixed.    (102)

	.  reduce 102 (src line 527)


state 46
	char_type:  Rwchar.    (87)

	.  reduce 87 (src line 445)


state 47
	wide_char_type:  Rwwchar.    (88)

	.  reduce 88 (src line 450)


state 48
	boolean_type:  Rwboolean.    (89)

	.  reduce 89 (src line 454)


state 49
	octet_type:  Rwoctet.    (90)

	.  reduce 90 (src line 459)


state 50
	string_type:  Rwstring.'<' positive_int_const '>' 
	string_type:  Rwstring.    (98)

	'<'  shift 90
	.  reduce 98 (src line 503)


state 51
	wide_string_type:  Rwwstring.'<' positive_int_const '>' 
	wide_string_type:  Rwwstring.    (100)

	'<'  shift 91
	.  reduce 100 (src line 517)


state 52
	scoped_name:  Identifier.    (8)

	.  reduce 8 (src line 163)


state 53
	scoped_name:  Scope.Identifier 

	Identifier  shift 92
	.  error


state 54
	signed_int:  signed_short_int.    (75)

	.  reduce 75 (src line 398)


state 55
	signed_int:  signed_long_int.    (76)

	.  reduce 76 (src line 402)


state 56
	signed_int:  signed_longlong_int.    (77)

	.  reduce 77 (src line 405)


state 57
	unsigned_int:  unsigned_short_int.    (81)

	.  reduce 81 (src line 421)


state 58
	unsigned_int:  unsigned_long_int.    (82)

	.  reduce 82 (src line 425)


state 59
	unsigned_int:  unsigned_longlong_int.    (83)

	.  reduce 83 (src line 428)


state 60
	signed_short_int:  Rwshort.    (78)

	.  reduce 78 (src line 408)


state 61
	unsigned_short_int:  Rwunsigned.Rwshort 
	unsigned_long_int:  Rwunsigned.Rwlong 
	unsigned_longlong_int:  Rwunsigned.Rwlong Rwlong 

	Rwlong  shift 94
	Rwshort  shift 93
	.  error


state 62
	native_dcl:  Rwnative simple_declarator.    (138)

	.  reduce 138 (src line 611)


state 63
	simple_declarator:  Identifier.    (139)

	.  reduce 139 (src line 615)


state 64
	typedef_dcl:  Rwtypedef type_declarator.    (140)

	.  reduce 140 (src line 620)


state 65
	type_declarator:  simple_type_spec.any_declarators 

	Identifier  shift 98
	.  error

	simple_declarator  goto 96
	any_declarators  goto 95
	array_declarator  goto 97

state 66
	type_declarator:  template_type_spec.any_declarators 

	Identifier  shift 98
	.  error

	simple_declarator  goto 96
	any_declarators  goto 99
	array_declarator  goto 97

state 67
	type_declarator:  constr_type_dcl.any_declarators 

	Identifier  shift 98
	.  error

	simple_declarator  goto 96
	any_declarators  goto 100
	array_declarator  goto 97

state 68
	simple_type_spec:  base_type_spec.    (62)

	.  reduce 62 (src line 355)


state 69
	scoped_name:  scoped_name.Scope Identifier 
	simple_type_spec:  scoped_name.    (63)

	Scope  shift 87
	.  reduce 63 (src line 359)


state 70
	template_type_spec:  sequence_type.    (91)

	.  reduce 91 (src line 464)


state 71
	template_type_spec:  string_type.    (92)

	.  reduce 92 (src line 468)


state 72
	template_type_spec:  wide_string_type.    (93)

	.  reduce 93 (src line 471)


state 73
	template_type_spec:  fixed_pt_type.    (94)

	.  reduce 94 (src line 474)


state 74
	base_type_spec:  integer_type.    (64)

	.  reduce 64 (src line 362)


state 75
	base_type_spec:  floating_pt_type.    (65)

	.  reduce 65 (src line 366)


state 76
	base_type_spec:  char_type.    (66)

	.  reduce 66 (src line 369)


state 77
	base_type_spec:  wide_char_type.    (67)

	.  reduce 67 (src line 372)


state 78
	base_type_spec:  boolean_type.    (68)

	.  reduce 68 (src line 375)


state 79
	base_type_spec:  octet_type.    (69)

	.  reduce 69 (src line 378)


state 80
	sequence_type:  Rwsequence.'<' type_spec ',' positive_int_const '>' 
	sequence_type:  Rwsequence.'<' type_spec '>' 

	'<'  shift 101
	.  error


state 81
	fixed_pt_type:  Rwfixed.'<' positive_int_const ',' positive_int_const '>' 

	'<'  shift 102
	.  error


state 82
	enum_dcl:  Rwenum Identifier.'{' enumerator '}' 

	'{'  shift 103
	.  error


state 83
	struct_def:  Rwstruct Identifier.'{' member '}' 
	struct_def:  Rwstruct Identifier.'{' '}' 
	struct_forward_dcl:  Rwstruct Identifier.    (112)

	'{'  shift 104
	.  reduce 112 (src line 586)


state 84
	union_def:  Rwunion Identifier.Rwswitch '(' switch_type_spec ')' '{' switch_body '}' 
	union_foRward_dcl:  Rwunion Identifier.    (129)

	Rwswitch  shift 105
	.  reduce 129 (src line 600)


state 85
	module_dcl:  Rwmodule Identifier '{'.definitions '}' 

	Rwconst  shift 8
	Rwenum  shift 21
	Rwmodule  shift 7
	Rwnative  shift 15
	Rwstruct  shift 22
	Rwtypedef  shift 16
	Rwunion  shift 23
	.  error

	native_dcl  goto 10
	definition  goto 3
	definitions  goto 106
	module_dcl  goto 4
	type_dcl  goto 6
	const_dcl  goto 5
	struct_dcl  goto 12
	struct_forward_dcl  goto 18
	struct_def  goto 17
	constr_type_dcl  goto 9
	enum_dcl  goto 14
	typedef_dcl  goto 11
	union_dcl  goto 13
	union_def  goto 19
	union_foRward_dcl  goto 20

state 86
	const_dcl:  Rwconst const_type Identifier.'=' const_expr 

	'='  shift 107
	.  error


state 87
	scoped_name:  scoped_name Scope.Identifier 

	Identifier  shift 108
	.  error


state 88
	floating_pt_type:  Rwlong Rwdouble.    (72)

	.  reduce 72 (src line 388)


state 89
	signed_longlong_int:  Rwlong Rwlong.    (80)

	.  reduce 80 (src line 416)


state 90
	string_type:  Rwstring '<'.positive_int_const '>' 

	Identifier  shift 52
	Integer_literal  shift 126
	Floating_pt_literal  shift 127
	Fixed_pt_literal  shift 128
	Character_literal  shift 129
	Wide_character_literal  shift 130
	String_literal  shift 132
	Wide_string_literal  shift 133
	Scope  shift 53
	RwFALSE  shift 135
	RwTRUE  shift 134
	'+'  shift 121
	'-'  shift 120
	'~'  shift 122
	'('  shift 125
	.  error

	positive_int_const  goto 109
	const_expr  goto 110
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	literal  goto 124
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	primary_expr  goto 119
	unary_operator  goto 118
	scoped_name  goto 123
	boolean_literal  goto 131

state 91
	wide_string_type:  Rwwstring '<'.positive_int_const '>' 

	Identifier  shift 52
	Integer_literal  shift 126
	Floating_pt_literal  shift 127
	Fixed_pt_literal  shift 128
	Character_literal  shift 129
	Wide_character_literal  shift 130
	String_literal  shift 132
	Wide_string_literal  shift 133
	Scope  shift 53
	RwFALSE  shift 135
	RwTRUE  shift 134
	'+'  shift 121
	'-'  shift 120
	'~'  shift 122
	'('  shift 125
	.  error

	positive_int_const  goto 136
	const_expr  goto 110
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	literal  goto 124
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	primary_expr  goto 119
	unary_operator  goto 118
	scoped_name  goto 123
	boolean_literal  goto 131

state 92
	scoped_name:  Scope Identifier.    (9)

	.  reduce 9 (src line 179)


state 93
	unsigned_short_int:  Rwunsigned Rwshort.    (84)

	.  reduce 84 (src line 432)


state 94
	unsigned_long_int:  Rwunsigned Rwlong.    (85)
	unsigned_longlong_int:  Rwunsigned Rwlong.Rwlong 

	Rwlong  shift 137
	.  reduce 85 (src line 436)


state 95
	type_declarator:  simple_type_spec any_declarators.    (141)
	any_declarators:  any_declarators.',' any_declarators 
